# itmo

Labs_c#/Lab1/: Lab1.Tests.csproj  Lab1.csproj  Program.cs
Labs_c#/Lab1/Entities/Ships/: Avgur.cs  BaseShip.cs  (+5 more)
Labs_c#/Lab1/Tests/: TestAllShips.cs  TestAvgurStella.cs  TestVaclas.cs  TestVaclasAvgurMeridian.cs  TestWalkingShuttleAvgur.cs  TestWalkingShuttleVaclasFirst.cs  TestWalkingShuttleVaclasSecond.cs
programming-1sem-C++/labwork-1/: main.cpp
programming/labwork-1/: CMakeLists.txt  README.md  main.cpp
programming/labwork-10/: CMakeLists.txt  README.md  interface.cpp  interface.h  main.cpp  requests.cpp  requests.h
programming/labwork-11/: README.md
programming/labwork-11/lib/: CMakeLists.txt  stl_algorithms.cpp  stl_algorithms.h
programming/labwork-11/tests/: CMakeLists.txt  stl_tests.cpp
programming/labwork-12/: README.md
programming/labwork-2/: CMakeLists.txt
programming/labwork-2/lib/: number.cpp  number.h
programming/labwork-2/tests/: number_test.cpp
programming/labwork-3/: CMakeLists.txt  image.cpp  image.h  main.cpp  main.h  realization.cpp
programming/labwork-4/: main.cpp
programming/labwork-5/: main.cpp
programming/labwork-6/lib/: parser.cpp  parser.h
programming/labwork-6/tests/: test_format.cpp  test_parser.cpp
programming/labwork-7/: CMakeLists.txt  Frames.cpp  Frames.h  README.md  Struct.puml  main.cpp
programming/labwork-8/: CMakeLists.txt  README.md
programming/labwork-8/lib/: CMakeLists.txt  buffer.h
programming/labwork-8/tests/: CMakeLists.txt  buffer_tests.cpp
programming/labwork-9/: MemoryPoolsAllocator.h
(+45 files in other folders)
